# data-clean-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py
server/datasets/: easy.csv  hard.csv  medium.csv
